tests/errors/break_outside_loop.efto
// Break outside a loop is an error.
break; // expect error: Can't use 'break' outside of a loop.
